Moved IO functionality to a new IO class. Updated some clinician items.
-Moved IO functionality (save, import, ids, paths) to a dedicated IO
class.
-Increased preferred size of main windows and set a seperate, minimum
size.
-Fixed the waiting list not being resizable.
-Changed the clinician account settings to save properly and to have a
better looking layout.
-Tidied up clinician attributes.
-Updated clinician undo and redo to work per action rather than per
save.
-Fixed some clinician view buttons having unclear labels, wrong ids, and
wrong associated methods.
-Fixed some alert boxes not using the css stylesheet.
-Changed undo and redo stacks to proper queue implementations
(LinkedList).
-Made the CLI runnable by running with a -c argument.
-Reordered user attribute screen to have orders category more separate.
-Changed tests to delete the testsave file.